tests/ui/on_trait.stderr
error: expected `enum`
 --> tests/ui/on_trait.rs:5:1
  |
5 | trait Foo {}
  | ^^^^^
